pg_tileserv/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx # the name that we find in the connection string
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
#  type: LoadBalancer # makes the exposed pods accessible from outside the cluster
