pg_tileserv/pg_tileserv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-tileserv # the name that we find in the connection string
spec:
# type: LoadBalancer
  selector:
    app: pg-tileserv
  ports:
    - port: 7800
      targetPort: 7800
# type: ClusterIP (the default one, the service is available only inside the k8s environment)
