pg_tileserv/pg_tileserv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress  
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:  
  rules:
    - http:   
        paths:   
          - path: /   
            pathType: Prefix   
            backend:   
              service:   
                name: pg-tilserv   
                port:   
                  number: 80
